--- a/index.html
+++ b/index.html
@@ -118,74 +118,102 @@
                 <ul class="team-list">
                     <li class="team-item">
                         <img src="./images/studio/igor.jpg" alt="Ігор Дем'яненко" width="270">
-                        <h3 class="team-name">Ігор Дем'яненко</h3>
-                        <p class="team-job">Product Designer</p>
-                        <div class="social-conteiner">
-                            <ul class="social-list"> 
-                               <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20px" height="20px"><use href="./images/icons.svg#icon-instagram"></use></svg>
-                                    </a>
-                                </li> 
-                                <li class="social-item"><a href="#" class="social-link">
-                                    <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg>
+                        <div class="team-cards">
+                            <h3 class="team-name">Ігор Дем'яненко</h3>
+                            <p class="team-job">Product Designer</p>
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20px" height="20px"><use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
                                     </a>
                                 </li>
-                                <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
                                     </a>
                                 </li>
-                                <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
-                        </div>
+                        </div>    
                     </li>  
                     <li class="team-item">
                         <img src="./images/studio/olha.jpg" alt="Ольга Рєпіна" width="270">
-                        <h3 class="team-name">Ольга Рєпіна</h3>
-                        <p class="team-job">Frontend Developer</p>
-                        <div class="social-conteiner">
-                            <ul class="social-list"> 
-                               <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20px" height="20px"><use href="./images/icons.svg#icon-instagram"></use></svg>
-                                    </a>
-                                </li> 
-                                <li class="social-item"><a href="#" class="social-link">
-                                    <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg>
+                        <div class="team-cards">
+                            <h3 class="team-name">Ольга Рєпіна</h3>
+                            <p class="team-job">Frontend Developer</p>
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20px" height="20px"><use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
                                     </a>
                                 </li>
-                                <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
                                     </a>
                                 </li>
-                                <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20"> <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
-                        </div>
-                    </li> 
+                        </div>   
+                    </li>
                     <li class="team-item">
                         <img src="./images/studio/nikolai.jpg" alt="Микола Тарасов" width="270">
-                        <h3 class="team-name">Микола Тарасов</h3>
-                        <p class="team-job">Marketing</p>
-                        <div class="social-conteiner">
-                            <ul class="social-list"> 
-                               <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20px" height="20px"><use href="./images/icons.svg#icon-instagram"></use></svg>
-                                    </a>
-                                </li> 
-                                <li class="social-item"><a href="#" class="social-link">
-                                    <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg>
-                                    </a>
-                                </li>
-                                <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg>
+                        <div class="team-cards">
+                            <h3 class="team-name">Микола Тарасов</h3>
+                            <p class="team-job">Marketing</p>
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
                                     </a>
                                 </li>
-                                <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
@@ -193,28 +221,40 @@
                     </li>
                     <li class="team-item">
                         <img src="./images/studio/mihail.jpg" alt="Михайло Єрмаков" width="270">
-                        <h3 class="team-name">Михайло Єрмаков</h3>
-                        <p class="team-job">Designer</p>
-                        <div class="social-conteiner">
-                            <ul class="social-list"> 
-                               <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20px" height="20px"><use href="./images/icons.svg#icon-instagram"></use></svg>
-                                    </a>
-                                </li> 
-                                <li class="social-item"><a href="#" class="social-link">
-                                    <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg>
-                                    </a>
-                                </li>
-                                <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg>
+                        <div class="team-cards">
+                            <h3 class="team-name">Михайло Єрмаков</h3>
+                            <p class="team-job">Designer</p>
+                            <ul class="social-list">
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20px" height="20px">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
                                     </a>
                                 </li>
-                                <li class="social-item"><a href="#" class="social-link">
-                                        <svg class="social-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="#" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
-                        </div>
+                        </div>  
                     </li> 
                 </ul>
             </div>
@@ -222,44 +262,44 @@
         <!-- Постійні клієнти -->
         <section class="section">
             <div class="container">
-                <h2 class="clients-title">Постійні клієнти</h2>
-                <ul class="clients-list">
-                    <li class="clients-item">
+                <h2 class="client-title">Постійні клієнти</h2>
+                <ul class="client-list">
+                    <li class="client-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" whidth="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item">
+                    <li class="client-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" whidth="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo2"></use>
                             </svg>
                         </a> 
                     </li>
-                    <li class="clients-item">
+                    <li class="client-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" whidth="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item">
+                    <li class="client-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" whidth="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo4"></use>
                             </svg>
                         </a> 
                     </li>
-                    <li class="clients-item">
+                    <li class="client-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" whidth="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-item">
+                    <li class="client-item">
                         <a href="#" class="client-link">
                             <svg class="client-icon" whidth="106" height="60">
                                 <use href="./images/icons.svg#icon-Logo6"></use>
@@ -274,9 +314,9 @@
     
     <!-- Подвал -->
     <footer class="footer-style">
-        <ul>
-            <div class="container footer-flex">
-                <li class="">
+        <div class="container">
+            <ul class="footer-flex">
+                <li>
                     <a href="#" class="foot logo"><span class="logo-blue">Web</span>Studio</a>
                     <!-- Адрес-подвал class="foot-address" -->
                     <address>
@@ -298,27 +338,31 @@
                     <div class="footer social-conteiner">
                         <h3 class="footer-social-name">Приєднуйтесь</h3>
                         <ul class="footer social-list"> 
-                        <li class="footer social-item"><a href="#" class="footer social-link">
+                            <li class="footer social-item">
+                                <a href="#" class="footer social-link">
                                     <svg class="footer social-icon" width="20px" height="20px"><use href="./images/icons.svg#icon-instagram"></use></svg>
                                 </a>
                             </li> 
-                            <li class="footer social-item"><a href="#" class="footer social-link">
-                                <svg class="footer social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg>
+                            <li class="footer social-item">
+                                <a href="#" class="footer social-link">
+                                    <svg class="footer social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg>
                                 </a>
                             </li>
-                            <li class="footer social-item"><a href="#" class="footer social-link">
+                            <li class="footer social-item">
+                                <a href="#" class="footer social-link">
                                     <svg class="footer social-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg>
                                 </a>
                             </li>
-                            <li class="footer social-item"><a href="#" class="footer social-link">
+                            <li class="footer social-item">
+                                <a href="#" class="footer social-link">
                                     <svg class="footer social-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </li>    
-            </div> 
-        </ul>   
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
