--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,7 @@
                         </a>
                     </li>
                     <li class="project-list">
-                        <a href="" class="project-link">
+                        <a href="#" class="project-link">
                             <img src="./images/portfolio/image-8.jpg" alt="Лейбл" width="370">
                             <div class="signature">
                                 <h3 lang="en" class="project-name">Проєкт LAB</h3>
@@ -137,7 +137,7 @@
                         </a>
                     </li>
                     <li class="project-list">
-                        <a href="" class="project-link">
+                        <a href="#" class="project-link">
                             <img src="./images/portfolio/image-9.jpg" alt="Ноутбук із презентацією" width="370">
                             <div class="signature">
                                 <h3 lang="en" class="project-name">Growing Business</h3>
@@ -151,19 +151,21 @@
     </main>
     <!-- Footer -->
     <footer class="footer-style">
-        <ul>
-            <div class="container footer-flex">
-                <li class="">
+        <div class="container">
+            <ul class="footer-flex">
+                <li>
                     <a href="#" class="foot logo"><span class="logo-blue">Web</span>Studio</a>
                     <!-- Адрес-подвал class="foot-address" -->
                     <address>
                         <ul>
                             <li>
-                                <a href="https://goo.gl/maps/4996Xed7HbbkdrFU8" target="_blank" rel="nofollow noopener noreferrer" class="foot-add-map">
-                                м. Київ, пр-т Лесі Українки, 26 </a>
+                                <a href="https://goo.gl/maps/4996Xed7HbbkdrFU8" target="_blank"
+                                    rel="nofollow noopener noreferrer" class="foot-add-map">
+                                    м. Київ, пр-т Лесі Українки, 26 </a>
                             </li>
                             <li>
-                                <a href="mailto:info@devstudio.com" target="_blank" class="foot-add-link">info@devstudio.com</a>   
+                                <a href="mailto:info@devstudio.com" target="_blank"
+                                    class="foot-add-link">info@devstudio.com</a>
                             </li>
                             <li>
                                 <a href="tel:+380961111111" target="_blank" class="foot-add-link">+38 096 111 11 11</a>
@@ -174,28 +176,40 @@
                 <li class="foter-item">
                     <div class="footer social-conteiner">
                         <h3 class="footer-social-name">Приєднуйтесь</h3>
-                        <ul class="footer social-list"> 
-                        <li class="footer social-item"><a href="#" class="footer social-link">
-                                    <svg class="footer social-icon" width="20px" height="20px"><use href="./images/icons.svg#icon-instagram"></use></svg>
-                                </a>
-                            </li> 
-                            <li class="footer social-item"><a href="#" class="footer social-link">
-                                <svg class="footer social-icon" width="20" height="20"><use href="./images/icons.svg#icon-twitter"></use></svg>
-                                </a>
-                            </li>
-                            <li class="footer social-item"><a href="#" class="footer social-link">
-                                    <svg class="footer social-icon" width="20" height="20"><use href="./images/icons.svg#icon-facebook"></use></svg>
+                        <ul class="footer social-list">
+                            <li class="footer social-item">
+                                <a href="#" class="footer social-link">
+                                    <svg class="footer social-icon" width="20px" height="20px">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
                                 </a>
                             </li>
-                            <li class="footer social-item"><a href="#" class="footer social-link">
-                                    <svg class="footer social-icon" width="20" height="20"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                            <li class="footer social-item">
+                                <a href="#" class="footer social-link">
+                                    <svg class="footer social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer social-item">
+                                <a href="#" class="footer social-link">
+                                    <svg class="footer social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer social-item">
+                                <a href="#" class="footer social-link">
+                                    <svg class="footer social-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
                                 </a>
                             </li>
                         </ul>
                     </div>
-                </li>    
-            </div> 
-        </ul>   
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
